# applytrack

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_RUNBOOK.md  PROJECT.md  PROJECT_STATUS.md  README.md  docker-compose.dev.yml  docker-compose.yml  render.yaml  vercel.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/ai/: __init__.py  client.py  errors.py  mock_provider.py  openai_provider.py  prompt_renderer.py  prompt_templates.py  provider.py  response_parser.py  retry.py  schemas.py  usage_tracker.py
backend/app/core/: config.py  logging.py  security.py
backend/app/database/: base.py  session.py
backend/app/exceptions/: handlers.py  http.py
backend/app/features/applications/: model.py  repository.py  router.py  schema.py  service.py
backend/app/shared/: base_model.py  base_repository.py  base_schema.py  ownership.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_companies_table.py  0002_create_applications_table.py  0003_create_recruiters_table.py  0004_create_interviews_table.py  0005_create_followups_table.py  0006_create_gmail_tables.py  0007_create_document_tables.py  0008_create_ai_usage_records.py  0009_create_resume_match_analyses.py  0010_create_interview_prep_packages.py  0011_create_notifications_table.py  0012_create_calendar_integration_tables.py  0013_create_tasks_table.py  0014_create_users_and_auth_tokens.py  0015_add_user_ownership.py  0016_create_user_settings.py
backend/tests/: conftest.py
frontend/: Dockerfile  (+10 more)
(+372 files in other folders)
